addons/solo-ui/config/http-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: solo-enterprise-ui-http
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    annotations: {}
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: example.com
      allowedRoutes:
        namespaces:
          from: All
