addons/solo-ui/config/https-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: solo-enterprise-ui-https
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    annotations: {}
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: example.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: solo-ui-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
